2004-11-19 Bogdan Gheorghe
	Fix for 43664 : Search should report matches outside of workspace
	
	* src/org/eclipse/cdt/internal/ui/editor/ExternalSearchAnnotationModel.java
	* src/org/eclipse/cdt/internal/ui/editor/ExternalSearchDocumentProvider.java	
	* src/org/eclipse/cdt/internal/ui/editor/ExternalSearchEditor.java
	* src/org/eclipse/cdt/internal/ui/editor/ExternalSearchFile.java	
	* src/org/eclipse/cdt/internal/ui/preferences/CSearchPreferencePage.java	
	* src/org/eclipse/cdt/internal/ui/search/CSearchResult.java	
	* src/org/eclipse/cdt/internal/ui/search/CSearchResultPage.java	
	* src/org/eclipse/cdt/internal/ui/search/NewSearchResultCollector.java
	* src/org/eclipse/cdt/internal/ui/search/actions/DeclarationsSearchGroup.java	
	* src/org/eclipse/cdt/internal/ui/search/actions/ReferencesSearchGroup.java
	* src/org/eclipse/cdt/ui/CUIPlugin.java
	* plugin.properties
	* plugin.xml

2004-11-12 David Inglis
	
	Fixed bug # 78292
	* src/org/eclipse/cdt/internal/ui/editor/TranslationUnitAnnotationModelEvent.java
	
2004-11-10 Chris Wiebe

	additional case for 78200
	* src/org/eclipse/cdt/internal/ui/wizards/classwizard/NewClassCreationWizardPage.java

2004-11-10 Chris Wiebe

	Fix for 78200
	* src/org/eclipse/cdt/internal/ui/wizards/filewizard/NewFileWizardMessages.properties
	* src/org/eclipse/cdt/internal/ui/wizards/filewizard/NewHeaderFileCreationWizardPage.java
	* src/org/eclipse/cdt/internal/ui/wizards/filewizard/NewSourceFileCreationWizardPage.java

2004-11-05 Alain Magloire
	Framework for code formatter.
	* src/org/eclipse/cdt/internal/coreext/CodeFormatterUtil.java
	* src/org/eclipse/cdt/internal/ui/ICHelpContextIds.java
	* src/org/eclipse/cdt/internal/ui/preferences/CodeFormatterPreferencePage.java
	* src/org/eclipse/cdt/internal/ui/preferences/PreferencesMessages.properties
	* src/org/eclipse/cdt/internal/ui/text/CFormattingStrategy.java
	* src/org/eclipse/cdt/ui/dialogs/CodeFormatterBlock.java
	* plugin.xml
	* plugin.properties

2004-11-05 Chris Wiebe
